fix spacing of controls in banner

--- a/src/assets/scss/itaipu.scss
+++ b/src/assets/scss/itaipu.scss
@@ -24,7 +24,7 @@
 				top: -97%;
 			}
 			&.control__prev {
-				top: -279%;
+				top: -226%;
 			}
 			&:focus {
 				outline: none;
@@ -96,9 +96,11 @@
 				}
 			}
 			.carousel-destaque--loop-content-description {
-				font: {
-					size: 18px;
-					weight: 400;
+				p {
+					font: {
+						size: 18px;
+						weight: 400;
+					}
 				}
 			}
 		}
